--- a/style.css
+++ b/style.css
@@ -1,1 +1,334 @@
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap');
 
+body{
+    background-color: black;
+}
+* {
+    margin: 0;
+    padding: 0;
+
+}
+
+nav {
+      max-width: 60vw;
+    justify-content: space-between;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    height: 100px;
+}
+
+
+
+
+nav img {
+    color: red;
+    height: 44px;
+    width: 144px;
+    position: relative;
+    z-index: 10;
+}
+
+nav button {
+    position: relative;
+    z-index: 10;
+}
+
+.btn {
+    padding: 10px 36px;
+    font-weight: bold;
+    background-color: transparent;
+    color: white;
+    border-radius: 4px;
+    border: 2px solid white;
+    font-size: 15px
+    ;
+}
+
+
+.btnsn {
+    background-color: red;
+    color: white;
+    padding: 7px 9px;
+    border-radius: 5px;
+    border: none;
+}
+
+.btnred {
+    background-color: #cf0000;
+    color: white;
+    padding: 14px 36px;
+    font-size: 20px;
+}
+
+.inp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.main input {
+    background-color: rgba(23, 23, 23, 0.8);
+    color: #f1f1f1;
+    padding: 20px 326px 21px 22px;
+    border-radius: 4px;
+    font-size: 14px;
+    border: 1px solid rgba(216, 216, 216, 0.6);
+}
+
+.main {
+      background-image: url("assets/images/bg.jpg");
+    background-position: center center;
+    background-size: max(1200px, 100vw);
+    background-repeat: no-repeat;
+    height: 644px;
+    position: relative;
+}
+
+ .main .box {
+    height: 644px;
+    width: 100%;
+    opacity: 0.69;
+    position: absolute;
+    top: 0;
+    background-color: rgb(0, 0, 0);
+}
+
+.hero {
+     font-family: 'Martel Sans', sans-serif;
+    height: calc(100% - 100px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    position: relative;
+    gap: 23px;
+    padding: 50px 30px;
+
+}
+
+.hero h1 {
+    font-family: "Martel Sans", sans-serif;
+    ;
+    font-weight: 900;
+    font-size: 56px;
+    /* line-height: 100px; */
+    /* box-sizing: border-box; */
+    text-align: center;
+}
+
+.hero p {
+    font-family: "Martel Sans", sans-serif;
+    ;
+    font-weight: 600;
+    font-size: 20px;
+    /* line-height: normal; */
+    text-align: center;
+}
+
+.hero span {
+    font-family: "Martel Sans", sans-serif;
+    font-size: 16px;
+    line-height: 56px;
+    text-align: center;
+
+}
+
+.separate {
+    background: linear-gradient(to right, rgba(33, 13, 22, 1) 16%, rgba(184, 40, 105, 1), rgba(229, 9, 20, 1), rgba(184, 40, 105, 1), rgba(33, 13, 22, 1) 84%);
+    height: 7px;
+    /* background-color: rgb(46, 44, 44); */
+    position: relative;
+    z-index: 20;
+}
+
+.grid {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 56px;
+    /* overflow-x: auto; */
+    padding: 35px;
+}
+
+.cards {
+    position: relative;
+    width: 150px;
+    flex: 0 0 auto;
+    /* overflow: hidden; */
+    border-radius: 7px;
+}
+
+.cards img {
+    display: block;
+    width: 119%;
+    height: 261px;
+    border-radius: 7px;
+}
+
+h2 {
+    /* margin-bottom: px; */
+    background-color: black;
+    color: white;
+    padding: 20px;
+    font-size: 25px;
+    font-weight: 700;
+    margin-left: 130px;
+    margin-bottom: -31px;
+    font-family: 'Martel Sans', sans-serif;
+}
+
+.number {
+    position: absolute;
+    /* background-color: rgba(0, 0, 0, 0.7); */
+    padding: 5px 10px;
+    font-size: 100px;
+    font-weight: 900;
+    top: 117px;
+    left: -32px;
+    color: rgb(19, 1, 1);
+    text-decoration: dotted;
+    font-family: 'Martel Sans', sans-serif;
+    -webkit-text-stroke: 1px rgb(247, 238, 238);
+}
+.boxes{
+    height: 230px;
+    width: 290px;
+    /* border: 2px solid white; */
+    border-radius: 10px;
+    background: linear-gradient(149deg, #192247 0%, #210e17 96.86%);
+    color: white;
+    
+}
+.boxes h1{
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px;
+    font-family: 'Martel Sans', sans-serif;
+}
+.boxes p{
+   margin: 20px;
+    font-size: 12px;
+    color: grey;
+    font-family:'Martel Sans', sans-serif ;
+    font-weight: 800;
+    
+}
+.info{
+    display: flex;
+   padding: 100px;
+    background-color: black;
+    /* border-radius: 1rem; */
+    position: relative;
+    gap: 20px;
+    margin: auto;
+    justify-content: center;
+    /* align-items: center; */
+}
+h2 .more{
+    background-color: black;
+    color: white;
+    padding: 8px;
+    font-size: 20px;
+    font-weight: 700;
+    margin-left: 130px;
+    margin-bottom: -31px;
+    font-family: 'Martel Sans', sans-serif;
+}
+svg{
+    margin-left: 205px;
+    margin-top: -18px;
+}
+.phone{
+    margin-top: 19px;
+}
+.ball{
+    margin-top: -24px;
+}
+.faqbox{
+    display: flex;
+    background-color: rgb(45, 45, 45);
+    padding: 19px 17px;
+    max-width: 79vw;
+    margin:  9px auto;;
+    justify-content: space-between;
+        margin-bottom: 0;
+}
+.faq{
+    background-color: black;
+    color: white;
+    font-size: 22px;
+    font-family:'Martel Sans', sans-serif ;
+}
+.faq h2{
+   background-color: black;
+    color: white;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    margin-left: 130px;
+    margin-bottom: -31px;
+    font-family:'Martel Sans', sans-serif  ;
+}
+.plus{
+    margin-top: 3px;
+
+}
+.input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+.hero1{
+    background-color: black;
+    font-family: "Martel Sans", sans-serif;
+    font-size: 16px;
+    line-height: 56px;
+    text-align: center;
+    color: white;
+    margin: 70px;
+}
+footer{
+    color: white;
+    max-width: 60vw;
+    margin: 45px 152px;
+}
+footer .ques{
+   padding: 35px 0;
+   color: grey;
+}
+
+.footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: white;
+}
+footer a{
+text-decoration: underline;
+color: rgb(110, 103, 103);
+}
+
+.footer-items{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+}
+
+.btndown{
+   margin: 65px 148px;
+}
+h4{
+   color: #e7e4e4d6;
+    font-family: 'Martel Sans', sans-serif;
+    margin: 2px 148px;
+}
+h6{
+    color: #e7e4e4d6;
+    font-family: 'Martel Sans', sans-serif;
+    margin: 24px 148px;
+}
