--- a/style.css
+++ b/style.css
@@ -78,8 +78,7 @@ nav button {
 }
 
 .main {
-      background-image: url("assets/images/bg.jpg");
-    background-position: center center;
+      background-image:url(https://assets.nflxext.com/ffe/siteui/vlv3/7968847f-3da9-44b3-8bbb-13a46579881f/web/IN-en-20250609-TRIFECTA-perspective_32b70b51-20d4-46db-8a1a-3d5428be5f0e_medium.jpg);
     background-size: max(1200px, 100vw);
     background-repeat: no-repeat;
     height: 644px;
